# MCP-Agent-Demo

./: .gitignore  README.md  pyproject.toml  run.py  sample_email.txt  send_email.py  setup.py
mcp/agents/: __init__.py  demo_agent.py
mcp/core/: __init__.py  config.py  server.py
mcp/tools/: email_file_tool.py  email_tool.py
src/mcp/agents/: demo_agent.py
