[project]
name = "mcp-agent-demo"
version = "0.1.0"
description = "A demonstration of a Multi-Component Protocol (MCP) agent system"
authors = [
    {name = "Ishwanku Saini", email = "ishwanku.saini@eversana.com"}
]
dependencies = [
    "fastapi>=0.92.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0"
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict = true

[tool.pytest.ini_options]
addopts = "--cov=mcp --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"